--- a/index.html
+++ b/index.html
@@ -44,34 +44,26 @@
             opacity: 0;
             transition: opacity 0.3s;
         }
-        #controls {
+        #controls, #legend, #side-panel {
             position: absolute;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
+        #controls {
             top: 10px;
             left: 10px;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
         #legend {
-            position: absolute;
             top: 10px;
             right: 10px;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
         #side-panel {
-            position: absolute;
             right: 10px;
             top: 60px;
             width: 300px;
             height: auto;
-            background: rgba(255, 255, 255, 0.95);
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
             display: none;
         }
     </style>
