--- a/index.html
+++ b/index.html
@@ -5,28 +5,19 @@
     <title>Citation Network Visualization</title>
     <style>
         body {
+            overflow: hidden;
             margin: 0;
             font-family: sans-serif;
-            background: linear-gradient(45deg, #f8f9fa, #e9ecef); /* Background gradient */
         }
         .node {
             stroke: #fff;
             stroke-width: 1.5px;
             cursor: pointer;
         }
-        .root-node {
-            stroke: black;
-            stroke-width: 3px;
-            r: 18px;
-            filter: drop-shadow(0px 0px 8px gold); /* Node glow effect */
-        }
         .link {
             stroke: #aaa;
             stroke-opacity: 0.6;
             stroke-width: 1px;
-        }
-        .dashed {
-            stroke-dasharray: 4, 2;
         }
         text {
             pointer-events: none;
@@ -37,6 +28,8 @@
         .tooltip {
             position: absolute;
             text-align: center;
+            width: auto;
+            height: auto;
             padding: 5px;
             font: 14px sans-serif;
             background: rgba(0, 0, 0, 0.7);
@@ -46,34 +39,59 @@
             opacity: 0;
             transition: opacity 0.3s;
         }
-        #controls, #legend, #sidePanel {
+        #controls {
             position: absolute;
+            top: 10px;
+            left: 10px;
             background: rgba(255, 255, 255, 0.9);
             padding: 10px;
             border-radius: 5px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
-        #controls { top: 10px; left: 10px; }
-        #legend { top: 100px; left: 10px; }
-        #sidePanel { right: 10px; top: 60px; width: 300px; display: none; }
+        #legend {
+            position: absolute;
+            top: 100px;
+            left: 10px;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
+        #sidePanel {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 300px;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            display: none;
+        }
     </style>
 </head>
 
 <body>
-    <!-- UI Elements -->
     <div id="controls">
         <label for="categoryFilter">Filter by Category:</label>
         <select id="categoryFilter">
             <option value="all">Show All</option>
         </select>
     </div>
-    <div id="legend"><strong>Legend</strong><div id="legendItems"></div></div>
-    <div id="sidePanel"><strong>Article Details</strong><div id="articleDetails"></div></div>
+
+    <div id="legend">
+        <strong>Legend</strong>
+        <div id="legendItems"></div>
+    </div>
+
+    <div id="sidePanel">
+        <strong>Article Details</strong>
+        <div id="articleDetails"></div>
+    </div>
 
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script>
         const jsonURL = "https://raw.githubusercontent.com/Codekarish/CitationsPeerNetwork/master/graph.json";
-        const rootNodeTitle = "Understanding cybersecurity capacity building and its relationship to norms and confidence";
 
         function loadGraph() {
             fetch(jsonURL)
@@ -84,66 +102,108 @@
 
         function initializeGraph(graph) {
             d3.select("svg").remove();
-            const width = window.innerWidth, height = window.innerHeight;
+
+            const width = window.innerWidth;
+            const height = window.innerHeight;
 
             const svg = d3.select("body").append("svg")
-                .attr("width", width).attr("height", height)
-                .call(d3.zoom().on("zoom", function(event) { g.attr("transform", event.transform); }))
+                .attr("width", width)
+                .attr("height", height)
+                .call(d3.zoom().on("zoom", function(event) {
+                    g.attr("transform", event.transform);
+                }))
                 .append("g");
 
             const g = svg.append("g");
-            const colorScale = d3.scaleOrdinal(d3.schemeCategory10);
-            const rootNode = graph.nodes.find(node => node.label.startsWith(rootNodeTitle));
 
-            // Legend
-            const categories = [...new Set(graph.nodes.map(d => d.modularity))];
-            const legend = d3.select("#legendItems");
-            categories.forEach(category => {
-                legend.append("div").html(`<span style="display:inline-block;width:12px;height:12px;background:${colorScale(category)}"></span> Category ${category}`);
-            });
-
-            // Force simulation
+            // Adjust forces for better spacing
             const simulation = d3.forceSimulation(graph.nodes)
-                .force("link", d3.forceLink(graph.links).id(d => d.id).distance(200))
-                .force("charge", d3.forceManyBody().strength(-600))
-                .force("collision", d3.forceCollide().radius(30))
+                .force("link", d3.forceLink(graph.links).id(d => d.id).distance(200)) // Increase link distance
+                .force("charge", d3.forceManyBody().strength(-600)) // Stronger repulsion
+                .force("collision", d3.forceCollide().radius(30)) // Prevent overlapping
                 .force("center", d3.forceCenter(width / 2, height / 2));
 
-            // Links (Curved and Dashed)
+            // Define color scale
+            const colorScale = d3.scaleOrdinal(d3.schemeCategory10);
+
+            // Extract unique categories for filtering
+            const categories = [...new Set(graph.nodes.map(d => d.modularity))];
+            const categoryFilter = d3.select("#categoryFilter");
+            categories.forEach(category => {
+                categoryFilter.append("option")
+                    .attr("value", category)
+                    .text(`Category ${category}`);
+            });
+
+            // Draw links (edges)
             const link = g.selectAll(".link")
                 .data(graph.links)
-                .enter().append("path")
-                .attr("class", "link")
-                .attr("fill", "none")
-                .attr("stroke", "#aaa")
-                .attr("stroke-opacity", 0.6)
-                .attr("stroke-width", 1)
-                .attr("d", d => `M${d.source.x},${d.source.y}Q${(d.source.x + d.target.x) / 2},${(d.source.y + d.target.y) / 2} ${d.target.x},${d.target.y}`);
+                .enter().append("line")
+                .attr("class", "link");
 
-            // Nodes with Category-Specific Shapes
+            // Draw nodes (circles)
             const node = g.selectAll(".node")
                 .data(graph.nodes)
                 .enter().append("circle")
-                .attr("r", d => d === rootNode ? 18 : 10)
-                .attr("fill", d => d === rootNode ? "gold" : colorScale(d.modularity || 0))
-                .attr("class", d => d === rootNode ? "node root-node" : "node")
-                .call(d3.drag().on("start", dragStarted).on("drag", dragged).on("end", dragEnded));
+                .attr("r", d => d.label === "Understanding cybersecurity..." ? 15 : 10) // Root node is bigger
+                .attr("fill", d => d.label === "Understanding cybersecurity..." ? "gold" : colorScale(d.modularity || 0)) // Root node is gold
+                .attr("class", "node")
+                .attr("data-category", d => d.modularity)
+                .call(d3.drag()
+                    .on("start", dragStarted)
+                    .on("drag", dragged)
+                    .on("end", dragEnded));
 
-            // Hover Effects
-            const tooltip = d3.select("body").append("div").attr("class", "tooltip");
+            // Hide labels by default, show only on hover
+            const label = g.selectAll(".label")
+                .data(graph.nodes)
+                .enter().append("text")
+                .attr("class", "label")
+                .attr("dx", 12)
+                .attr("dy", ".35em")
+                .text(d => d.label)
+                .style("font-size", "10px")
+                .style("fill", "black")
+                .style("visibility", "hidden");
+
+            // Tooltip for better readability
+            const tooltip = d3.select("body").append("div")
+                .attr("class", "tooltip");
+
             node.on("mouseover", function(event, d) {
                 tooltip.style("opacity", 1)
-                    .html(`<strong>${d.label}</strong>`)
+                    .html(`<strong>${d.label}</strong><br>Author: ${d.authors || "Unknown"}<br>Year: ${d.year || "N/A"}`)
                     .style("left", (event.pageX + 10) + "px")
                     .style("top", (event.pageY - 10) + "px");
-                d3.select(this).attr("r", d === rootNode ? 20 : 12);
+                d3.select(this).attr("r", d => d.label === "Understanding cybersecurity..." ? 18 : 12); // Highlight node
+                label.filter(l => l.id === d.id).style("visibility", "visible");
             }).on("mouseout", function() {
                 tooltip.style("opacity", 0);
-                d3.select(this).attr("r", d => d === rootNode ? 18 : 10);
+                d3.select(this).attr("r", d => d.label === "Understanding cybersecurity..." ? 15 : 10); // Reset node size
+                label.style("visibility", "hidden");
             });
 
-            // Side Panel Details
-            const sidePanel = d3.select("#sidePanel"), articleDetails = d3.select("#articleDetails");
+            // Filtering by category
+            categoryFilter.on("change", function() {
+                const selectedCategory = this.value;
+                node.style("visibility", d => selectedCategory === "all" || d.modularity == selectedCategory ? "visible" : "hidden");
+                link.style("visibility", d => selectedCategory === "all" || d.source.modularity == selectedCategory || d.target.modularity == selectedCategory ? "visible" : "hidden");
+            });
+
+            // Add legend
+            const legendItems = d3.select("#legendItems");
+            categories.forEach(category => {
+                legendItems.append("div")
+                    .style("display", "flex")
+                    .style("align-items", "center")
+                    .style("margin-bottom", "5px")
+                    .html(`<div style="width: 10px; height: 10px; background: ${colorScale(category)}; margin-right: 5px;"></div>Category ${category}`);
+            });
+
+            // Side panel for article details
+            const sidePanel = d3.select("#sidePanel");
+            const articleDetails = d3.select("#articleDetails");
+
             node.on("click", function(event, d) {
                 sidePanel.style("display", "block");
                 articleDetails.html(`
@@ -155,8 +215,16 @@
             });
 
             simulation.on("tick", () => {
-                link.attr("d", d => `M${d.source.x},${d.source.y}Q${(d.source.x + d.target.x) / 2},${(d.source.y + d.target.y) / 2} ${d.target.x},${d.target.y}`);
-                node.attr("cx", d => d.x).attr("cy", d => d.y);
+                link.attr("x1", d => d.source.x)
+                    .attr("y1", d => d.source.y)
+                    .attr("x2", d => d.target.x)
+                    .attr("y2", d => d.target.y);
+
+                node.attr("cx", d => d.x)
+                    .attr("cy", d => d.y);
+
+                label.attr("x", d => d.x)
+                    .attr("y", d => d.y);
             });
 
             function dragStarted(event, d) {
@@ -164,8 +232,17 @@
                 d.fx = d.x;
                 d.fy = d.y;
             }
-            function dragged(event, d) { d.fx = event.x; d.fy = event.y; }
-            function dragEnded(event, d) { if (!event.active) simulation.alphaTarget(0); d.fx = null; d.fy = null; }
+
+            function dragged(event, d) {
+                d.fx = event.x;
+                d.fy = event.y;
+            }
+
+            function dragEnded(event, d) {
+                if (!event.active) simulation.alphaTarget(0);
+                d.fx = null;
+                d.fy = null;
+            }
         }
 
         loadGraph();
