--- a/index.html
+++ b/index.html
@@ -69,39 +69,6 @@
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
             display: none;
         }
-        #loading {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-        }
-        .spinner {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #3498db;
-            border-radius: 50%;
-            width: 30px;
-            height: 30px;
-            animation: spin 1s linear infinite;
-            margin: 0 auto;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-        body.dark-mode {
-            background: #121212;
-            color: #ffffff;
-        }
-        body.dark-mode .node {
-            stroke: #333;
-        }
-        body.dark-mode .link {
-            stroke: #555;
-        }
-        body.dark-mode text {
-            fill: #ffffff;
-        }
     </style>
 </head>
 
@@ -111,11 +78,6 @@
         <select id="categoryFilter">
             <option value="all">Show All</option>
         </select>
-        <button id="forceLayout">Force-Directed</button>
-        <button id="radialLayout">Radial</button>
-        <input type="range" id="timeSlider" min="2000" max="2023" value="2023">
-        <button id="resetButton">Reset</button>
-        <button id="darkModeToggle">Toggle Dark Mode</button>
         <div>
             <label for="nodeSizeToggle">Node Size:</label>
             <input type="checkbox" id="nodeSizeToggle"> Large Nodes
@@ -132,27 +94,32 @@
         <div id="articleDetails"></div>
     </div>
 
-    <div id="loading">
-        <div class="spinner"></div>
-        <p>Loading graph data...</p>
-    </div>
-
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script>
         const jsonURL = "https://raw.githubusercontent.com/Codekarish/CitationsPeerNetwork/master/graph.json";
 
         function loadGraph() {
-            d3.select("#loading").style("display", "block");
+            console.log("Loading graph data..."); // Debugging
             fetch(jsonURL)
-                .then(response => response.json())
-                .then(graph => {
-                    initializeGraph(graph);
-                    d3.select("#loading").style("display", "none");
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! Status: ${response.status}`);
+                    }
+                    return response.json();
                 })
-                .catch(error => console.log("Error loading graph data:", error));
+                .then(graph => {
+                    console.log("Graph data loaded successfully:", graph); // Debugging
+                    initializeGraph(graph);
+                })
+                .catch(error => {
+                    console.error("Error loading graph data:", error); // Debugging
+                    alert("Error loading graph data. Please check the console for details.");
+                });
         }
 
         function initializeGraph(graph) {
+            console.log("Initializing graph with data:", graph); // Debugging
+
             d3.select("svg").remove();
 
             const width = window.innerWidth;
@@ -217,10 +184,11 @@
                 .attr("stroke", d => (d.source.label === "Understanding cybersecurity..." || d.target.label === "Understanding cybersecurity...") ? "red" : "#aaa");
 
             // Draw nodes with gradients and shapes
+            let isLarge = false; // Default to small nodes
             const node = g.selectAll(".node")
                 .data(graph.nodes)
                 .enter().append("circle")
-                .attr("r", d => d.label === "Understanding cybersecurity..." ? 20 : 10) // Root node is bigger
+                .attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10)) // Root node is 2x larger
                 .attr("fill", d => d.label === "Understanding cybersecurity..." ? "url(#root-gradient)" : colorScale(d.modularity || 0)) // Node Gradients
                 .attr("filter", "url(#glow)") // Node Glow
                 .attr("class", "node")
@@ -239,11 +207,7 @@
                 .text(d => d.label)
                 .style("font-size", "10px")
                 .style("fill", "black")
-                .style("visibility", "hidden")
-                .style("paint-order", "stroke")
-                .style("stroke", "white")
-                .style("stroke-width", "3px")
-                .style("stroke-linejoin", "round");
+                .style("visibility", "hidden");
 
             // Tooltip for better readability
             const tooltip = d3.select("body").append("div")
@@ -257,7 +221,7 @@
                     .style("top", (event.pageY - 10) + "px");
                 d3.select(this).transition()
                     .duration(200)
-                    .attr("r", d => d.label === "Understanding cybersecurity..." ? 25 : 15); // Enlarge node on hover
+                    .attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 35 : 25) : (isLarge ? 20 : 15)); // Enlarge node on hover
                 link.filter(l => l.source === d || l.target === d)
                     .transition()
                     .duration(200)
@@ -266,7 +230,7 @@
                 tooltip.style("opacity", 0);
                 d3.select(this).transition()
                     .duration(200)
-                    .attr("r", d => d.label === "Understanding cybersecurity..." ? 20 : 10); // Reset node size
+                    .attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10)); // Reset node size
                 link.filter(l => l.source === d || l.target === d)
                     .transition()
                     .duration(200)
@@ -336,38 +300,9 @@
                 d.fy = null;
             }
 
-            // Force-Directed Layout Toggle
-            document.getElementById("radialLayout").addEventListener("click", function() {
-                simulation.force("radial", d3.forceRadial(width / 2, height / 2).strength(0.1));
-            });
-
-            document.getElementById("forceLayout").addEventListener("click", function() {
-                simulation.force("radial", null);
-            });
-
-            // Time Slider for Dynamic Networks
-            document.getElementById("timeSlider").addEventListener("input", function(event) {
-                const year = event.target.value;
-                node.style("opacity", d => d.year <= year ? 1 : 0.2);
-                link.style("opacity", d => d.source.year <= year && d.target.year <= year ? 1 : 0.2);
-            });
-
-            // Reset Button
-            document.getElementById("resetButton").addEventListener("click", function() {
-                simulation.alpha(1).restart();
-                node.attr("cx", d => d.x).attr("cy", d => d.y);
-                link.attr("x1", d => d.source.x).attr("y1", d => d.source.y)
-                    .attr("x2", d => d.target.x).attr("y2", d => d.target.y);
-            });
-
-            // Dark Mode Toggle
-            document.getElementById("darkModeToggle").addEventListener("click", function() {
-                document.body.classList.toggle("dark-mode");
-            });
-
             // Node Size Toggle
             document.getElementById("nodeSizeToggle").addEventListener("change", function(event) {
-                const isLarge = event.target.checked;
+                isLarge = event.target.checked;
                 node.attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10));
             });
         }
